--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,1 +1,95 @@
+body {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: 0 auto;
+    background-color: #a6a5ab;
+}
 
+.header {
+    position: sticky;
+    top: 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 50px;
+    background: linear-gradient(to bottom, #59467d, #a6a5ab);
+}
+
+.header__logo {
+    font-size: 24px;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+}
+
+.nav__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.nav__item {
+    margin: 0 15px;
+}
+
+.nav__link {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: bold;
+}
+
+.button {
+    background-color: #8f282c;
+    color: #ffffff;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 5px;
+    margin-left: 20px;
+}
+
+.button:hover {
+    background-color: #807f85;
+}
+
+.footer {
+    background: linear-gradient(to bottom, #a6a5aba8, #59467d);
+    color: #ffffff;
+    padding: 20px 50px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__column {
+    width: 30%;
+}
+
+.footer__title {
+    margin-bottom: 10px;
+}
+
+.footer__list {
+    list-style: none;
+    padding: 0;
+}
+
+.footer__item {
+    margin-bottom: 5px;
+}
+
+.footer__link {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+main {
+    min-height: 100px;
+    margin: 0 auto;
+    max-width: 1800px;
+    text-align: center;
+    background-color: #ebebeb;
+}
