--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,1 +1,68 @@
+h1 {
+  color: #ffffff;
+  font-size: 36px;
+  margin: 0;
+}
 
+section {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+  width: 100%;
+  max-width: 1200px;
+}
+
+.card {
+  width: 280px;
+  background-color: #ffffff;
+  border-radius: 12px;
+  padding: 20px;
+  text-align: center;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease-in-out;
+  border: 4px solid #a6a5ab;
+}
+
+.card:hover {
+  transform: translateY(-5px);
+}
+
+.card__title {
+font-size: 22px;
+font-weight: bold;
+color: #ffffff;
+background-color: #8f282c;
+padding: 10px;
+border-radius: 8px;
+}
+
+.card__description, .card__days {
+  font-size: 16px;
+  font-weight: bold;
+  color: #4a4a4a;
+  margin: 10px 0;
+}
+
+.card__price {
+  font-size: 20px;
+  font-weight: bold;
+  color: #4a4a4a;
+}
+
+.card__image {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 15px;
+}
+
+.card__footer {
+  background-color: #59467d;
+  color: #ffffff;
+  padding: 8px;
+  border-radius: 8px;
+  font-size: 14px;
+  margin-top: 10px;
+}
