--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,5 @@
 h1 {
-  color: #ffffff;
+  color: #000000;
   font-size: 36px;
   margin: 0;
 }
@@ -20,24 +20,29 @@ section {
   padding: 20px;
   text-align: center;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease-in-out;
   border: 4px solid #a6a5ab;
 }
 
 .card:hover {
-  transform: translateY(-5px);
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.692);
 }
 
 .card__title {
 font-size: 22px;
-font-weight: bold;
 color: #ffffff;
 background-color: #8f282c;
 padding: 10px;
 border-radius: 8px;
 }
 
-.card__description, .card__days {
+.card__description {
+  font-size: 16px;
+  font-weight: bold;
+  color: #999999;
+  margin: 10px 0;
+}
+
+.card__days {
   font-size: 16px;
   font-weight: bold;
   color: #4a4a4a;
