--- a/CSS/index.css
+++ b/CSS/index.css
@@ -13,11 +13,18 @@ section {
   max-width: 1200px;
 }
 
+.cards {
+  margin: 0 auto;
+  display: flex;
+}
+
 .card {
   width: 280px;
   background-color: #ffffff;
   border-radius: 12px;
   padding: 20px;
+  max-width: 450px;
+  flex: 1 1 300px;
   text-align: center;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
   border: 4px solid #a6a5ab;
