--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,7 +1,7 @@
 h1 {
   color: #000000;
   font-size: 36px;
-  margin: 20px 0 0 0;
+  margin: 20px 0 30px 0;
 }
 
 section {
@@ -10,7 +10,7 @@ section {
   gap: 20px;
   justify-content: center;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1500px;
 }
 
 .cards {
