--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,23 +1,71 @@
-h1 {
+.section__title {
   color: #000000;
   font-size: 36px;
   margin: 20px 0 30px 0;
 }
+/**/
+.main_banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
 
-section {
+.main_banner::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.3));
+  z-index: 1;
+}
+
+.main_banner__image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  filter: blur(4px);
+}
+
+.main_banner article img{
+  display: flex;
+  flex-direction: column;
+}
+
+.main_banner h1 {
+  position: relative;
+  z-index: 2;
+  color: #050193;
+  font-size: 3rem;
+  text-align: center;
+  padding: 15px 30px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.205);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: bold;
+}
+
+.main_banner h1 span {
+  color: rgb(216, 0, 0);
+  font-weight: bold;
+}
+
+.cards {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
   width: 100%;
   max-width: 1500px;
-}
-
-.cards {
   margin: 0 auto;
   display: flex;
 }
 
+/**/
 .card {
   width: 280px;
   background-color: #ffffff;
