--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,6 +3,7 @@
   font-size: 36px;
   margin: 20px 0 30px 0;
 }
+
 /**/
 .main_banner {
   display: flex;
@@ -26,12 +27,11 @@
 .main_banner__image {
   position: absolute;
   width: 100%;
-  height: 100%;
-  object-fit: contain;
+  height: auto;
   filter: blur(4px);
 }
 
-.main_banner article img{
+.main_banner article img {
   display: flex;
   flex-direction: column;
 }
@@ -84,11 +84,11 @@
 }
 
 .card__title {
-font-size: 22px;
-color: #ffffff;
-background-color: #8f282c;
-padding: 10px;
-border-radius: 8px;
+  font-size: 22px;
+  color: #ffffff;
+  background-color: #8f282c;
+  padding: 10px;
+  border-radius: 8px;
 }
 
 .card__description {
