--- a/CSS/index.css
+++ b/CSS/index.css
@@ -76,7 +76,7 @@
   flex: 1 1 300px;
   text-align: center;
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
-  border: 4px solid #a6a5ab;
+  border: 2px solid #a6a5ab71;
 }
 
 .card:hover {
@@ -95,14 +95,15 @@
   font-size: 16px;
   font-weight: bold;
   color: #999999;
-  margin: 10px 0;
+  margin: 30px 0;
+  padding: 10px;
 }
 
 .card__days {
   font-size: 16px;
   font-weight: bold;
   color: #4a4a4a;
-  margin: 10px 0;
+  margin: 30px 0;
 }
 
 .card__price {
@@ -126,4 +127,61 @@
   border-radius: 8px;
   font-size: 14px;
   margin-top: 10px;
+}
+
+.servicios__container {
+  display: flex;
+  max-width: 100%;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.servicio__container {
+  display: flex;
+  flex-direction: column;
+  width: 28%;
+  margin: 30px 0;
+  align-items: center;
+}
+
+.servicio__container i {
+  padding: 20px;
+  border-radius: 40px;
+  background-color: black;
+  color: #ebebeb;
+  font-size: 2rem;
+  width: 35px;
+}
+
+.servicio__container__separadores {
+  border-left: 1px grey solid;
+  border-right: 1px grey solid;
+}
+
+.servicio__tittle {
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-top: 40px;
+}
+
+.map-section {
+  padding: 20px;
+  background-color: #ebebeb;
+}
+
+.map-sectionarticle {
+  border: 1px solid #ddd;
+  padding: 15px;
+  background-color: #fff;
+}
+
+.map-sectiontitle {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.map-sectioniframe {
+  width: 100%;
+  height: 400px;
+  border: none;
 }
